ingress-dashboard.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  rules:
    - host: express.pylang.ml
      http:
        paths:
          - backend:
              serviceName: mongo-express-service
              servicePort: 8081
    - host: dashboard.pylang.ml
      http:
        paths:
          - backend:
              serviceName: kubernetes
              servicePort: 8443
